niby działająca analiza